# stern-system-simulation

./: README.md
assets/textures/: list.txt
source/: CMakeLists.txt  component.hpp  entity.cpp  entity.hpp  main.cpp  scene.cpp  scene.hpp  system.cpp  system.hpp
